--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/carboneater/renovate-semantic-reproduction#readme",
   "devDependencies": {
+    "@alloc/is": "^3.1.0",
     "@types/node": "^18.6.5",
     "typescript": "^4.6.4"
   },
